SERVER-62207 Make ReshardCollectionCoordinator store an owned BSON object for the command

(cherry picked from commit 5eab3ca8acaa0e8004c50112187b6809667157a2)